# Rolling_Drones

./: .gitignore  Cargo.toml  Fair 2024 schedule of tasks  README.md  TASKS!!  updated_tasks!!
assets/configurations/: chat_topology.toml  double_chain.toml  star.toml  sub_net.toml  web_topology.toml
assets/multimedia/path_max/: max_server.txt  max_server2.txt
assets/multimedia/paths/: media_server1.txt  media_server2.txt  text_server1.txt
assets/multimedia/text_files/: divina_commedia.txt
final_project/: Cargo.toml
final_project/assets/configurations/: butterfly.toml  sub_net.toml  tree.toml
final_project/src/: main.rs
final_project/src/simulation_control/: drone_image.rs  mod.rs
rolling_drone/: Cargo.toml
rolling_drone/src/: drone.rs  lib.rs  tests.rs
src/: main.rs
src/GUI/: advanced_logs_window.rs  butterfly.rs  chat_windows.rs  double_chain.rs  login_window.rs  mod.rs  shared_info_plugin.rs  simulation_commands.rs  star_decagram.rs  temp_side_panel.rs  test_try.rs  topology_display.rs  tree.rs  web_media_plugin.rs
src/clients/: assembler.rs  chat_client.rs  common.rs  mod.rs  web_browser.rs
src/common_data/: common.rs
src/common_things/: common.rs
src/fair2024/: drone.rs  input.toml  mod.rs  simulation_control.rs
src/gui/: advanced_logs_window.rs  butterfly.rs  chat_windows.rs  double_chain.rs  error_display.rs  highlighted_routes.rs  login_window.rs  mod.rs  shared_info_plugin.rs  simulation_commands.rs  star_decagram.rs  web_media_plugin.rs
src/multimedia/SC/: ciccio.txt
src/multimedia/paths/: media_server1.txt  text_server1.txt
src/network_initializer/: connection_validity.rs  file_reader.rs  mod.rs  network_initializer.rs
src/servers/: ChatServer.rs  Chat_max.rs  MediaServerFillo.rs  TextAssember.rs  TextServer.rs  TextServerFillo.rs  Text_max.rs  Text_server.rs  assembler.rs  assembler_max.rs  chat_max.rs  chat_server_fillo.rs  media_server_fillo.rs  mod.rs  text_max.rs  text_server_fillo.rs  utilities_max.rs
src/servers/Files/: file1.txt
src/simulation_control/: buttons.rs  colorful_name.rs  drone_image.rs  drone_tests.rs  mod.rs  simulation.rs  simulation_control.rs  text_output.rs
src/tests/: commands_test.rs  example.rs  input.toml  mod.rs  packets_test.rs  tests.rs
