[package]
name = "Rolling_Drones"
version = "0.1.0"
edition = "2021"

[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize", "debug"]}
toml = "0.8.19"
serde = { version = "1.0.215", features = ["derive"] }
crossbeam-channel = "0.5.13"
rand = "0.9.0-beta.0"
bevy = "0.14.2"
lazy_static = "1.5.0"