[package]
name = "Rolling_Drones"
version = "0.1.0"
edition = "2021"

[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize", "debug"]}
bevy =  { version = "0.15.3", features = ["webgpu"] }
bevy_framepace = "0.18.1"
toml = "0.8.19"
crossbeam-channel = "0.5.13"
rand = "0.9.0-beta.0"
petgraph = "0.7.1"
lazy_static = "1.5.0"
bagel_bomber = { git = "https://github.com/daw-dev/bagel-bomber.git", default-features = false }
skylink = { git = "https://github.com/Suge42/Skylink_drone.git" }
fungi_drone = { git = "https://github.com/Fungi-B-D/Fungi-Drone.git" }
Krusty_Club = { git = "https://github.com/Ossyk/Krusty_Club.git" }
LeDron_James = { git = "https://github.com/anass03/LeDron_James.git",default-features = false}
lockheedrustin-drone = { git = "https://github.com/Lockheed-Rustin/drone.git" }
wg_2024-rust = { git = "https://github.com/LuigiMiazzo17/unitn-advancedProgramming-WGL_2024-drone.git" }
rustbusters-drone = { git = "https://github.com/Rustbusters/drone.git", features= [] }
rusteze_drone = { git = "https://github.com/Rusteze-AP/drone.git", branch = "main" }
rustafarian-drone = { git = "https://github.com/Rustafarian-Unitn/rustafarian-drone"}
bevy_egui="0.33.0"
once_cell = "1.8.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
bincode = "1.3.3"
rolling_drone = { git = "https://github.com/giorebecchi/RollingDrone.git"}
base64 = "0.21.7"
[dev-dependencies]
rusty_tester = { git = "https://github.com/rusty-drone-2024/rusty-tester" }


