[package]
name = "rolling_drone"
version = "0.1.0"
authors = ["Giovanni Rebecchi <giovanni.rebecchi@gmail.com>"]
edition = "2021"
description = "Advanced Programming project"
license = "MIT OR Apache-2.0"
repository = "https://github.com/giorebecchi/Rolling_Drones.git"

[lib]
name = "rolling_drone"
path = "src/lib.rs"

[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize", "debug"]}
toml = "0.8.19"
serde = { version = "1.0.215", features = ["derive"] }
crossbeam-channel = "0.5.13"
rand = "0.9.0-beta.0"

